; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_revwalk.c_git_revwalk_hide_head.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_revwalk.c_git_revwalk_hide_head.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@GIT_REVWALK__PUSH_OPTIONS_INIT = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@GIT_HEAD_FILE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_revwalk_hide_head(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_4__, align 4
  store i32* %0, i32** %2, align 8
  %4 = bitcast %struct.TYPE_4__* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %4, i8* align 4 bitcast (%struct.TYPE_4__* @GIT_REVWALK__PUSH_OPTIONS_INIT to i8*), i64 4, i1 false)
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @assert(i32* %5)
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  store i32 1, i32* %7, align 4
  %8 = load i32*, i32** %2, align 8
  %9 = load i32, i32* @GIT_HEAD_FILE, align 4
  %10 = call i32 @git_revwalk__push_ref(i32* %8, i32 %9, %struct.TYPE_4__* %3)
  ret i32 %10
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @assert(i32*) #2

declare dso_local i32 @git_revwalk__push_ref(i32*, i32, %struct.TYPE_4__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
